--- a/index.html
+++ b/index.html
@@ -486,10 +486,9 @@
                     ['linear'],
                     ['zoom'],
                     // zoom, opacity
-                    6, 0.5,
-                    7, 0.4,
-                    7.99, 0.15,
-                    8, 0.1,
+                    5, 0.3,
+                    7.99, 0.4,
+                    8, 0.2,
                     9, 0.1
                 ]
             }
@@ -526,7 +525,7 @@
                     ['zoom'],
                     // zoom, opacity
                     8, 0.1,
-                    9, 0.12,
+                    9.5, 0.2,
                     10, 0.13,
                     10.5, 0.14,
                     11, 0.1
@@ -538,6 +537,7 @@
             'type': 'geojson',
             'data': `${base_url}all-church.json`
         });
+
         map.addLayer({
             'id': 'all-church',
             'type': 'circle',
@@ -545,25 +545,15 @@
             'paint': {
                 'circle-color': '#f89c2a',
                 'circle-pitch-alignment': 'map',
-                'circle-radius': [
-                    'interpolate',
-                    ['linear'],
-                    ['zoom'],
-                    // zoom, radius
-                    8, 3,
-                    10, 5,
-                    12, 7,
-                    14, 9,
-                    16, 11,
-                    18, 13
-                ],
+                'circle-radius': 2,
                 'circle-opacity': [
                     'interpolate',
                     ['linear'],
                     ['zoom'],
                     // zoom, opacity
-                    8, 0.4,
-                    9, 0.5,
+                    8, 0.6,
+                    9.9, 0.6,
+                    10, 0.3,
                     14, 0.6,
                     16, 0.8,
                     18, 1
@@ -663,6 +653,27 @@
 
         renderMeshPopulation(distanceToShow)
 
+        map.setPaintProperty('all-church', 'circle-radius', [
+            'interpolate',
+            ['linear'],
+            ['zoom'],
+            // zoom, radius
+            5, 2,
+            6, 3,
+            8, ["*", (distanceToShow * 0.002), 2],
+            8.5, ["*", (distanceToShow * 0.002), 2.6],
+            9, ["*", (distanceToShow * 0.002), 3.7],
+            9.5, ["*", (distanceToShow * 0.002), 5.1],
+            10, ["*", (distanceToShow * 0.002), 7.5],
+            10.5, ["*", (distanceToShow * 0.002), 10.8],
+            10.6, 5,
+            11, 7,
+            13, 9,
+            15, 11,
+            17, 13,
+            19, 15
+        ]);
+
         map.moveLayer("train_station_names")
 
         let layers = map.getStyle().layers
@@ -737,10 +748,9 @@
                         ['linear'],
                         ['zoom'],
                         // zoom, opacity
-                        10, 0.25,
-                        11, 0.3,
-                        12, 0.35,
-                        13, 0.4,
+                        10, 0.4,
+                        11, 0.5,
+                        12, 0.4,
                         14, 0.5,
                         14.5, 0.2,
                         15, 0.1
@@ -803,7 +813,18 @@
             'source': `${distance}-route`,
             'paint': {
                 'line-color': '#fc8b45',
-                'line-width': 2,
+                'line-width': [
+                    'interpolate',
+                    ['linear'],
+                    ['zoom'],
+                    // zoom, radius
+                    9, 2,
+                    11, 2.5,
+                    13, 3,
+                    15, 3.5,
+                    17, 5,
+                    19, 7
+                ],
                 'line-opacity': 0.58
             }
         }, bottomLayerId);
@@ -835,7 +856,14 @@
             'source': `${distance}-station-point-without-church`,
             'paint': {
                 'circle-color': '#425bfa',
-                'circle-radius': 3,
+                'circle-radius': [
+                    'interpolate',
+                    ['linear'],
+                    ['zoom'],
+                    // zoom, radius
+                    3, 1,
+                    6, 2
+                ],
                 'circle-opacity': 0.4
             }
         }, bottomLayerId)
